rusty-cdk-macros/tests/fails/topic_display_name_too_long.rs
use rusty_cdk_macros::topic_display_name;
struct TopicDisplayName(String);
fn main() {
    topic_display_name!("aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa");
}
